# pixi_panda_ros2

./: .gitmodules  README.md  pixi.toml
src/audio_capture_py/: package.xml  setup.cfg  setup.py
src/audio_capture_py/audio_capture_py/: audio_capture_node.py  audio_play_node.py
src/record_dataset/: README.md  package.xml  setup.cfg  setup.py
src/record_dataset/launch/: dataset.launch.py  record_dataset.launch.py
src/record_dataset/rviz/: recording.rviz
src/so100_to_ros/: send_to_ros.py  teleoperate.py
