<?xml version="1.0"?>
<package format="3">
  <name>record_dataset</name>
  <version>0.1.0</version>

  <description>
    Launch files for recording datasets with the Franka Panda, RealSense cameras,
    Zoom H5 audio interface, and teleoperation.
  </description>

  <maintainer email="alec.bossard@utoulouse.fr">raphael</maintainer>

  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Packages launched by this package -->
  <exec_depend>franka_bringup</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>audio_capture_py</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>